2003-08-07  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Fail, if libgpg-error could not be found.

2003-07-31  Werner Koch  <wk@gnupg.org>

	Released 1.1.42.
	
	* configure.ac: Set LT version to 7/0/0.

2003-07-30  Werner Koch  <wk@gnupg.org>

	* AUTHORS (Maintainer): Assigned Moritz as Maintainer.

2003-07-30  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Include much more complete list of `Interface changes
	relative to the 1.1.12 release'.

2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bumbed version number up to 1.1.42-cvs.

2003-07-09  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Reintroduce --disable-asm, since it is needed by
	mpi/config.links.

2003-07-05  Moritz Schulte  <moritz@g10code.com>

	* README: Few changes, mention libgpg-error.
	
2003-06-18  Moritz Schulte  <moritz@g10code.com>

	* configure.ac (available_ciphers): Removed Serpent, hrrm.

2003-06-17  Moritz Schulte  <moritz@g10code.com>

	* acinclude.m4: Removed macro definitions: GNUPG_CHECK_FAQPROG,
	GNUPG_CHECK_ENDIAN, GNUPG_CHECK_CACHE, GNUPG_CHECK_PIC,
	GNUPG_CHECK_EXPORTDYNAMIC, GNUPG_CHECK_IPC, GNUPG_PROG_NM,
	GNUPG_SYS_SYMBOL_UNDERSCORE, GNUPG_FUNC_MKDIR_TAKES_ONE_ARG,
	GPH_PROG_DB2ANY.
	Added macro definitions: AM_PATH_GPG_ERROR.
	
	* configure.ac: Use alternative approach for building based on
	conditional sources, which does not make automake eat all your
	memory, etc.
	Removed unused tests.
	Renamed --enable-static-rnd to --enable-random.
	Use Autoconf's AC_C_BIGENDIAN macro instead of our own.
	Re-organized the whole file.

2003-06-16  Moritz Schulte  <moritz@g10code.com>

	* configure.ac (AC_CONFIG_FILES): Removed doc/version.sgml.

2003-06-11  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Remove --enable-libgpg-error flag.
	Ue AC_PATH_GPG_ERROR.

2003-06-09  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Mention API changes and libgpg-error.

2003-05-25  Moritz Schulte  <moritz@g10code.com>
